# my_practice

./: .gitignore
boost-sample/: CMakeLists.txt  lambda.cpp  ptree.cpp  yield.cpp
keras-sample/: sample-01.py
postgres-sample/: CMakeLists.txt  pqxx_sample.cpp
psycopg2-sample/: select01.py  startenv.sh
